--- a/views/signing.hbs
+++ b/views/signing.hbs
@@ -22,6 +22,8 @@
                     <input type="password" name="password" class="form-control">
                     <br>
                     <button class="btn btn-success btn-block" type="submit" value="signup" name="submit">Sign Up!</button>
+                    <br>
+                    <p style="font-size: 14px">Already Have an account? <a href="/user/login">Login!</a></p>
                 {{^}}
                     <label>Email Address</label>
                     <input type="email" name="email" class="form-control">
@@ -29,6 +31,8 @@
                     <input type="password" name="password" class="form-control">
                     <br>
                     <button class="btn btn-success btn-block" type="submit" value="signup" name="submit">Login</button>
+                    <br>
+                    <p style="font-size: 14px">Don't Have an account? <a href="/user/signup">Signup!</a></p>
                 {{/if}}
             </form>
         </div>
